Thu Jan 20 16:13:47 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c, src/cwindow.c: Remove old, unsued code. Add a

		METACITY_DEBUG_UPDATES

	environment variable.

Wed Jan 19 17:23:05 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (meta_compositor_genie): Disable genie effect
	* src/compositor.c (process_create): Get rid of some more
	debugging spew.

Wed Jan 19 16:54:21 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (process_create): Remove debugging spew

Fri Jan 14 17:09:32 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (draw_windows): Carefully avoid drawing windows
	that are obscured by other windows.

Thu Jan 13 23:31:31 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/cwindow.c (cwindow_new_draw): Some drawing fixes

Thu Jan 13 18:43:17 2005  Søren Sandmann  <sandmann@redhat.com>

	* Initial check-in of changes to compositing manager. New files:
		matrix.[ch]	matrix manipulation from The Gimp
		cwindow.[ch]	the CWindow class

	It is not yet very smooth or spiffy, and it is not snappy at all.

2005-01-11  Elijah Newren  <newren@gmail.com>

	Correct highlighting of windows in workspace switcher popup.
	Fixes #163450.

	* src/tabpopup.c (meta_select_workspace_expose_event): Remove race
	between FocusIn/FocusOut events and the expose event by replacing
	window->has_focus with
	window==window->display->expected_focus_window.

2005-01-09  Elijah Newren  <newren@gmail.com>

	* configure.in: post-release version bump to 2.9.5

2005-01-09  Elijah Newren  <newren@gmail.com>

	* NEWS: Metacity 2.9.3 unstable release

2005-01-09  Elijah Newren  <newren@gmail.com>

	* src/display.c (meta_display_open):
	* src/display.h (struct _MetaDisplay):
	* src/window.c (meta_window_free, meta_window_client_message,
	meta_window_notify_focus):

	Remove the hack from bug 128200; it isn't needed anymore with the
	fix from bug #160470.

2005-01-09  Elijah Newren  <newren@gmail.com>
